Fix_OverlapNavBarIssue

--- a/nayyar-web/src/pages/DefaultPage/DefaultPage.css
+++ b/nayyar-web/src/pages/DefaultPage/DefaultPage.css
@@ -2,7 +2,7 @@
 .default-page-root {
     width: 100vw;
     height: 100vh; /* Fallback */
-    height: 100dvh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background: var(--clr-bg);
